# LLMProject

./: .replit  front.py  main.py  pm.ipynb  projectman.py  pyproject.toml  write_docs.py
agents/: coding.py  enhance.py  legal.py  marketing.py  prez.py
docs/: Project_Documentation.docx
outputs/: Project_Documentation.docx  all_responses.json  format.json
utils/: image_generator.py  prompts.py  utils.py
